--- a/housefull5.html
+++ b/housefull5.html
@@ -181,7 +181,7 @@
         <h2>🎵 Songs</h2>
         <video width="100%" height="auto" controls poster="song-thumbnail.jpg"
             style="border-radius: 15px; margin-bottom: 30px; box-shadow: 0 8px 30px rgba(255, 75, 43, 0.8);">
-            <source src="song1.mp4" type="video/mp4">
+            <source src="lalpari.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
