--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <!-- Bilingual Announcement -->
         <div class="announcement">
-            <a href="#">📣 You'll get to watch the movie here first on June 6 – <strong>आपको यह मूवी सबसे पहले यहीं 6 जून को देखने को मिलेगी!</strong></a>
+            <a href="#">📣 You'll get to watch the movie here first on Morning Tomarro – <strong>आपको यह मूवी यहीं कल सुबह को देखने को मिलेगी!</strong></a>
         </div>
 
         <h2>📜 Description</h2>
