--- a/index.html
+++ b/index.html
@@ -177,11 +177,13 @@
                 padding: 10px;
             }
         }
-        a{
+
+        a {
             text-decoration: none;
         }
-        a:hover{
-            font-size:x-large;
+
+        a:hover {
+            font-size: x-large;
             color: rgb(233, 47, 44);
             text-decoration: underline;
         }
@@ -195,8 +197,7 @@
     </header>
 
     <div class="container">
-        <img src="photo.jpg" alt="Housefull 5 Poster"
-            class="poster" />
+        <img src="photo.jpg" alt="Housefull 5 Poster" class="poster" />
 
         <h2>🎞 Official Trailer</h2>
         <iframe class="trailer" src="https://www.youtube.com/embed/niAGgwJ91Ac?si=H6gCDBnqhcsRCkxi&autoplay=1&mute=1"
@@ -204,7 +205,8 @@
 
         <!-- Bilingual Announcement -->
         <div class="announcement">
-            <a href="#">📣 You'll get to watch the movie here first on Morning Tomarro – <strong>आपको यह मूवी यहीं कल सुबह को देखने को मिलेगी!</strong></a>
+            <a href="#">📣 You'll get to watch the movie here first on Morning Tomarro – <strong>आपको यह मूवी यहीं कल
+                    सुबह को देखने को मिलेगी!</strong></a>
         </div>
 
         <h2>📜 Description</h2>
