--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <footer>
         &copy; 2025 Housefull 5 | Designed by anuj7788
     </footer>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="152230" async data-cfasync="false"></script>
 </body>
 
 </html>
