--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="152230" async data-cfasync="false"></script>
     <header>
         <h1>🎬 Housefull 5</h1>
         <p>Comedy | Bollywood | Releasing June 6, 2025</p>
@@ -55,7 +56,6 @@
     <footer>
         &copy; 2025 Housefull 5 | Designed by anuj7788
     </footer>
-    <script src="sw.js"></script>
 </body>
 
 </html>
