--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="152230" async data-cfasync="false"></script>
     <header>
         <h1>🎬 Housefull 5</h1>
-        <p>Comedy | Bollywood | Releasing June 6, 2025</p>
+        <p>Comedy | Bollywood | Released June 6, 2025</p>
     </header>
 
     <div class="container">
-        <img src="photo.jpg" alt="Housefull 5 Poster" class="poster" />
+        <img src="poster.jpg" alt="Housefull 5 Poster" class="poster" />
 
         <h2>🎞 Official Trailer</h2>
-        <iframe class="trailer" src="https://www.youtube.com/embed/niAGgwJ91Ac?si=H6gCDBnqhcsRCkxi&autoplay=1&mute=1"
-            title="YouTube video player" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-        <!-- Bilingual Announcement -->
-        <div class="announcement">
-            <a href="#">📣 You'll get to watch the movie here first on Morning Tomarro – <strong>आपको यह मूवी यहीं कल
-                    सुबह को देखने को मिलेगी!</strong></a>
-        </div>
+        <iframe class="trailer" src="https://www.youtube.com/embed/niAGgwJ91Ac?si=H6gCDBnqhcsRCkxi"
+            title="Trailer" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <hr>
+        <h2> HOUSEFULL 5 FULL MOVIE </h2>
+        <iframe 
+        class="trailer"
+    src="https://drive.google.com/file/d/1lhmfGaiJ4D-nIjeahcuYPgakVwPrqSAd/preview"  
+    allow="autoplay" 
+    title="FULL MOVIE"
+    allowfullscreen>
+  </iframe>
 
         <h2>📜 Description</h2>
         <p>
