--- a/cal.html
+++ b/cal.html
@@ -112,11 +112,11 @@
 
         /* Operator buttons */
         button.op {
-            background: linear-gradient(145deg, #3a0ca3, #5f0f40);
-            box-shadow: 0 0 8px rgba(255, 0, 150, 0.5);
+            background: linear-gradient(145deg, #36d7f0, #0fb6fd);
+            box-shadow: 0 0 8px rgba(9, 69, 95, 0.5);
         }
         button.op:hover {
-            box-shadow: 0 0 15px rgba(255, 0, 150, 0.9);
+            box-shadow: 0 0 15px rgba(2, 138, 188, 0.9);
         }
 
         /* Equal button */
