--- a/cal.html
+++ b/cal.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Brython Calculator</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ✅ Important for mobile -->
-
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython.min.js"></script>
     <style>
         body {
@@ -21,24 +19,21 @@
         /* Container for both label + calculator */
         .calc-container {
             text-align: center;
-            width: 100%;
-            max-width: 500px; /* prevents it from being too wide on big screens */
             transition: transform 0.4s ease, box-shadow 0.4s ease;
-            padding: 10px;
         }
 
         .calc-container:hover {
             transform: scale(1.05);
         }
-
         .dev-label {
-            font-size: 24px;
+            font-size: 30px;
             color: #f73b1a;
             margin-bottom: 12px;
             text-shadow: 0 0 8px rgba(255, 98, 0, 0.8);
-            border: 3px double #009dff;
-            border-radius: 12px;
-            padding: 8px;
+            transition: color 0.3s, text-shadow 0.3s;
+            border: 5px double  #009dff;
+            border-radius: 15px;
+            margin-bottom: 10%;
         }
 
         .calc-container:hover .dev-label {
@@ -50,10 +45,11 @@
         .calculator {
             background: rgba(30, 30, 50, 0.7);
             backdrop-filter: blur(15px);
-            padding: 20px;
+            padding: 25px;
             border-radius: 20px;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.7);
-            width: 100%;
+            width: 320px;
+            transition: box-shadow 0.4s ease;
         }
 
         .calc-container:hover .calculator {
@@ -73,17 +69,18 @@
             color: #00fff2;
             box-shadow: inset 0 0 10px rgba(0, 255, 200, 0.4);
             outline: none;
+            transition: box-shadow 0.3s ease;
         }
 
         .buttons {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
+            gap: 14px;
         }
 
         button {
             padding: 18px;
-            font-size: 20px;
+            font-size: 18px;
             border: none;
             border-radius: 12px;
             cursor: pointer;
@@ -101,6 +98,7 @@
 
         button:active {
             transform: scale(0.92);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6) inset;
         }
 
         /* Number buttons */
@@ -108,65 +106,46 @@
             background: linear-gradient(145deg, #1a1a2e, #16213e);
             box-shadow: 0 0 8px rgba(0, 195, 255, 0.4);
         }
+        button.num:hover {
+            box-shadow: 0 0 15px rgba(0, 195, 255, 0.8);
+        }
 
         /* Operator buttons */
         button.op {
             background: linear-gradient(145deg, #36d7f0, #0fb6fd);
             box-shadow: 0 0 8px rgba(9, 69, 95, 0.5);
         }
+        button.op:hover {
+            box-shadow: 0 0 15px rgba(2, 138, 188, 0.9);
+        }
 
         /* Equal button */
-        .equal {
-            background: linear-gradient(145deg, #00c853, #009624);
+        #backspace {
+            background: linear-gradient(145deg, #ff9800, #e65100);
+            box-shadow: 0 0 10px rgba(255, 152, 0, 0.6);
+        }
+        #backspace:hover {
+            box-shadow: 0 0 20px rgba(255, 180, 0, 0.9);
         }
 
         /* Clear button */
         #clear {
             background: linear-gradient(145deg, #d81b60, #880e4f);
             grid-column: span 2;
+            box-shadow: 0 0 10px rgba(255, 0, 120, 0.6);
+        }
+        #clear:hover {
+            box-shadow: 0 0 20px rgba(255, 0, 120, 0.9);
         }
 
         /* Backspace button */
-        #backspace {
-            background: linear-gradient(145deg, #ff9800, #e65100);
+        .equal {
+            background: linear-gradient(145deg, #00c853, #009624);
             grid-column: span 2;
+            box-shadow: 0 0 10px rgba(0, 255, 100, 0.6);
         }
-
-        /* 📱 Mobile adjustments */
-        @media (max-width: 600px) {
-            body {
-                padding: 0;
-            }
-
-            .calc-container {
-                max-width: 100%;
-                height: 100vh;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            .calculator {
-                width: 100%;
-                height: auto;
-                padding: 15px;
-                border-radius: 0;
-            }
-
-            #display {
-                height: 70px;
-                font-size: 28px;
-            }
-
-            button {
-                font-size: 22px;
-                padding: 20px;
-            }
-
-            .dev-label {
-                font-size: 20px;
-                margin-bottom: 15px;
-            }
+        .equal:hover {
+            box-shadow: 0 0 20px rgba(0, 255, 100, 0.9);
         }
     </style>
 </head>
@@ -194,11 +173,12 @@
 
             <button class="num">0</button>
             <button class="num">.</button>
-            <button class="equal">=</button>
+            <button id="backspace">⌫</button>
             <button class="op">+</button>
 
             <button id="clear">C</button>
-            <button id="backspace">⌫</button>
+            <button class="equal">=</button>
+            
         </div>
     </div>
 </div>
