--- a/cal.html
+++ b/cal.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Brython Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ✅ Important for mobile -->
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython.min.js"></script>
     <style>
         body {
@@ -19,21 +21,24 @@
         /* Container for both label + calculator */
         .calc-container {
             text-align: center;
+            width: 100%;
+            max-width: 500px; /* prevents it from being too wide on big screens */
             transition: transform 0.4s ease, box-shadow 0.4s ease;
+            padding: 10px;
         }
 
         .calc-container:hover {
             transform: scale(1.05);
         }
+
         .dev-label {
-            font-size: 30px;
+            font-size: 24px;
             color: #f73b1a;
             margin-bottom: 12px;
             text-shadow: 0 0 8px rgba(255, 98, 0, 0.8);
-            transition: color 0.3s, text-shadow 0.3s;
-            border: 5px double  #009dff;
-            border-radius: 15px;
-            margin-bottom: 10%;
+            border: 3px double #009dff;
+            border-radius: 12px;
+            padding: 8px;
         }
 
         .calc-container:hover .dev-label {
@@ -45,11 +50,10 @@
         .calculator {
             background: rgba(30, 30, 50, 0.7);
             backdrop-filter: blur(15px);
-            padding: 25px;
+            padding: 20px;
             border-radius: 20px;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.7);
-            width: 320px;
-            transition: box-shadow 0.4s ease;
+            width: 100%;
         }
 
         .calc-container:hover .calculator {
@@ -69,18 +73,17 @@
             color: #00fff2;
             box-shadow: inset 0 0 10px rgba(0, 255, 200, 0.4);
             outline: none;
-            transition: box-shadow 0.3s ease;
         }
 
         .buttons {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 14px;
+            gap: 10px;
         }
 
         button {
             padding: 18px;
-            font-size: 18px;
+            font-size: 20px;
             border: none;
             border-radius: 12px;
             cursor: pointer;
@@ -98,7 +101,6 @@
 
         button:active {
             transform: scale(0.92);
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6) inset;
         }
 
         /* Number buttons */
@@ -116,7 +118,7 @@
             box-shadow: 0 0 8px rgba(9, 69, 95, 0.5);
         }
         button.op:hover {
-            box-shadow: 0 0 15px rgba(2, 138, 188, 0.9);
+            box-shadow: 0 0 15px rgba(45, 157, 179, 0.9);
         }
 
         /* Equal button */
@@ -146,6 +148,43 @@
         }
         .equal:hover {
             box-shadow: 0 0 20px rgba(0, 255, 100, 0.9);
+        }
+
+        /* 📱 Mobile adjustments */
+        @media (max-width: 600px) {
+            body {
+                padding: 0;
+            }
+
+            .calc-container {
+                max-width: 100%;
+                height: 100vh;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .calculator {
+                width: 100%;
+                height: auto;
+                padding: 15px;
+                border-radius: 0;
+            }
+
+            #display {
+                height: 70px;
+                font-size: 28px;
+            }
+
+            button {
+                font-size: 22px;
+                padding: 20px;
+            }
+
+            .dev-label {
+                font-size: 20px;
+                margin-bottom: 15px;
+            }
         }
     </style>
 </head>
@@ -178,7 +217,6 @@
 
             <button id="clear">C</button>
             <button class="equal">=</button>
-            
         </div>
     </div>
 </div>
