--- a/cal.html
+++ b/cal.html
@@ -33,6 +33,7 @@
 
         .dev-label {
             font-size: 24px;
+            width: 100%;
             color: #f73b1a;
             margin-bottom: 12px;
             text-shadow: 0 0 8px rgba(255, 98, 0, 0.8);
@@ -154,6 +155,8 @@
         @media (max-width: 600px) {
             body {
                 padding: 0;
+                margin-left: 5%;
+                margin-right: 10%;
             }
 
             .calc-container {
